// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSort - Snapshots > matches snapshot with Popularity content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_2_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Sort
    </h2>
  </div>
  <div
    aria-labelledby="_r_2_"
    class=""
    data-testid="filter-sort-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="false"
        aria-label="Recent"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-asterisk h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 8v8"
          />
          <path
            d="m8.5 14 7-4"
          />
          <path
            d="m8.5 10 7 4"
          />
        </svg>
        <span
          class=""
        >
          Recent
        </span>
      </div>
      <div
        aria-checked="true"
        aria-label="Popularity"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <span
          class=""
        >
          Popularity
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterSort - Snapshots > matches snapshot with Recent content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_1_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Sort
    </h2>
  </div>
  <div
    aria-labelledby="_r_1_"
    class=""
    data-testid="filter-sort-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="true"
        aria-label="Recent"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-asterisk h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 8v8"
          />
          <path
            d="m8.5 14 7-4"
          />
          <path
            d="m8.5 10 7 4"
          />
        </svg>
        <span
          class=""
        >
          Recent
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Popularity"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <span
          class=""
        >
          Popularity
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterSort - Snapshots > matches snapshot with default props 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="_r_0_"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Sort
    </h2>
  </div>
  <div
    aria-labelledby="_r_0_"
    class=""
    data-testid="filter-sort-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <div
        aria-checked="true"
        aria-label="Recent"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-asterisk h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 8v8"
          />
          <path
            d="m8.5 14 7-4"
          />
          <path
            d="m8.5 10 7 4"
          />
        </svg>
        <span
          class=""
        >
          Recent
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="Popularity"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <span
          class=""
        >
          Popularity
        </span>
      </div>
    </div>
  </div>
</div>
`;
